- more "we" gone - replacement of "chapter" by "clause"

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -2599,27 +2599,27 @@ This specification does not require or request any change to any other OMG speci
 
 \section{How to Read This Specification}
 \cbs
-The initial five chapters of this specification describe the scope of the specification, determine conformance criteria, provide normative references, define terms and definitions, and introduce symbols that are used in the specification. 
-The next three chapters are \emph{informative}. This chapter provides some background information, the next two provide a high-level
- summary of usage scenarios and goals (Chapter \ref{c:goal}) and an overview over the design of
-\DOL  (Chapter \ref{c:design}).
+The initial five clauses of this specification describe the scope of the specification, determine conformance criteria, provide normative references, define terms and definitions, and introduce symbols that are used in the specification. 
+The next three clauses are \emph{informative}. This clause provides some background information, the next two provide a high-level
+ summary of usage scenarios and goals (clause \ref{c:goal}) and an overview over the design of
+\DOL  (clause \ref{c:design}).
 \cbe
 
 \medskip \noindent 
-Chapter \ref{c:abstract-syntax} defines the abstract syntax of \DOL (\emph{normative}) in Extended
+Clause \ref{c:abstract-syntax} defines the abstract syntax of \DOL (\emph{normative}) in Extended
 Backus–Naur Form (EBNF).  
-Chapter \ref{a:text-syntax} provides a human friendly text serialization of the abstract syntax of 
+Clause \ref{a:text-syntax} provides a human friendly text serialization of the abstract syntax of 
 \DOL (\emph{normative}). 
 Annex \ref{a:MOF} contains the abstract syntax specified as an SMOF compliant meta model.
 (\emph{informative}).
 
-\medskip \noindent Chapter \ref{c:semantics} defines the
+\medskip \noindent Clause \ref{c:semantics} defines the
 model-theoretic semantics of \DOL on the abstract syntax, and also
 makes the notion of heterogeneous logical environment (providing
 languages, logics and translations) precise (\emph{normative}).
 
 \medskip \noindent Annex \ref{a:lola} specifies an RDF vocabulary for
-the terms in chapter~\ref{terms-and-defs}, and for OMS languages and
+the terms in clause~\ref{terms-and-defs}, and for OMS languages and
 translation that conform with \DOL  (\emph{normative}).
 
 \medskip \noindent Various languages are shown to  conform to \DOL in
@@ -2639,10 +2639,8 @@ language whose conformance with \DOL will be established by a registry
 Annex \ref{a:uses} provides of \DOL texts, which provide examples for all \DOL constructs, which 
 are specified in the abstract syntax 
 (\emph{informative}).
-Annex \ref{a:use-cases} sketches scenarios that outline how \DOL is intended to be applied. For 
-each scenario, we list its status of implementation, the \DOL features it makes use of, and 
-provide a brief description
-(\emph{informative}).
+Annex \ref{a:use-cases} sketches scenarios that outline how \DOL is intended to be applied \cbs (\emph{informative}). For 
+each scenario,  a brief description  is provided, and the utilized \DOL features as well as the status of its implementation are listed.\cbe
 
 Annex~\ref{a:tools} gives an overview of available  software tools for
 DOL.  Annex~\ref{a:loc/id} discusses the implementation of a
@@ -2779,15 +2777,15 @@ The use of different OMS within the same context leads to  several
 challenges in the design and deployment of OMS, which have been addressed by current research in 
 ontological engineering, formal software specification and formal modeling:
 \begin{itemize}
-\item How can we support shareability and reusability of OMS within the same domain?
-\item How can we merge OMS in different domains, particularly in the cases 
+\item How \cbs is it possible \cbe to support shareability and reusability of OMS within the same domain?
+\item How \cbs is it possible \cbe to merge OMS in different domains, particularly in the cases 
 in which the OMS are axiomatized in different logical languages?
 \item What notions of modularity play a role when only part of an OMS is being shared or reused?
 \item What are the relationships between versions of an OMS axiomatized in different logical languages?
 \end{itemize}
 
 
-To illustrate these challenges, in this clause we present a set of usage scenarios that involve the use of more than one OMS. These scenarios address the areas of ontology design, formal specification, and model-driven development. In spite of their many differences, they  all highlight one common theme:  
+To illustrate these challenges, \cbs this clause presents \cbe a set of usage scenarios that involve the use of more than one OMS. These scenarios address the areas of ontology design, formal specification, and model-driven development. In spite of their many differences, they  all highlight one common theme:  
  the use of multiple OMS leads to interoperability challenges. 
  %There  are ad-hoc solutions to these challenges, and specialized languages and tools are used in practice. 
 
@@ -2799,7 +2797,7 @@ between OMS as part of OMS networks in a semantically well-defined way. Thus, to
 \cbs
 Most of the following subsections are illustrated with sample OMS
 libraries. These are always written in \DOL, see the \DOL Text
-Serialization in chapter ~\ref{a:text-syntax}. Naturally, they also
+Serialization in clause ~\ref{a:text-syntax}. Naturally, they also
 contain parts written in different OMS languages (e.g.\ \OWL), the
 syntax of which is not described in this standard, but in other
 standard documents.
@@ -4707,7 +4705,7 @@ and has led to some corrections on the abstract syntax.  These
 reasons, plus the requirement in the OntoIOp RFP to provide a
 semantics, have lead to inclusion of the semantics in the standard
 document proper, even though the semantics is quite technical and
-therefore has a more limited readership than the other chapters of
+therefore has a more limited readership than the other clauses of
 this standard.
 
 The semantics starts with the theoretical foundations. Since \DOL is a
@@ -6723,7 +6721,7 @@ $C_1,\ldots, C_n$ taking into account \syntax{AlignSem}.
 %\end{figure}
 
 This annex specifies LoLa, an RDF vocabulary that implements the terms and definitions from \cref{terms-and-defs}.
-Applications of LoLa include modeling statements about OMS in RDF, e.g., when annotating OMS, or when describing new conforming logics, OMS languages, serializations, translations, etc., in the \termref{registry} stipulated by chapter~\ref{c:conformance}.
+Applications of LoLa include modeling statements about OMS in RDF, e.g., when annotating OMS, or when describing new conforming logics, OMS languages, serializations, translations, etc., in the \termref{registry} stipulated by clause~\ref{c:conformance}.
 LoLa is currently maintained as an OWL ontology and, prospectively, as an OMS library implemented in \DOL, at \url{https://ontohub.org/meta/lola/ontology}.\footnote{The preferred location for LoLa snapshots being part of this OMG standard is \url{http://www.omg.org/spec/DOL/Current/lola}.}.
 For a full treatment of the background and design considerations of LoLa please see~\cite{LMK:LoLaModularOntologyLogLangTrans12}.
 
@@ -8859,10 +8857,10 @@ elided, and left for a later version of \DOL.
 \infannex{Example Uses of all \DOL Constructs}\label{a:uses}
 \cbs
 This annex provides example uses of \DOL constructs.  Jointly with
-chapter~\ref{c:goal}, which already contains \DOL examples for the
+\cref{c:goal}, which already contains \DOL examples for the
 usage scenarios, all \DOL constructs (although not necessarily all
 variants of each construct) are covered.  The examples follow the \DOL
-Text Serialization (chapter ~\ref{a:text-syntax}). The following table
+Text Serialization (\cref{a:text-syntax}). The following table
 provides an overview of which \DOL language constructs have been 
 covered where.
 \cbe
