--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1854,25 +1854,41 @@ other axioms and theorems; or have another of many possible statuses.
 	  A sentence belongs to the logical language aspect of an OMS language.
   \end{note}
 
-
-\termdefinition{axiom}{\termref{sentence} that is  postulated to be valid (i.e.\ true in every \termref{model}).}
-
-
-  \termdefinition{theorem}{\termref{sentence} that has been proven from other axioms \index{axiom} and theorems\index{theorem}.}
-
   \termdefinition{satisfaction relation}{relation between models and sentences indicating which sentences hold true in the model.}
 
 \red{
   \termdefinition{logical theory}{\termref{signature} equipped with a set of sentences\index{sentence} over the signature.}
 }
+\cbs
+\begin{note}
+Each logical theory is also an \termref{OMS}, and conversely each
+\termref{flattenable OMS} has a logical theory.
+\end{note}
 
-\red{
- \termdefinitionLight{\termref{entailment}\synonym specialization}{relation between two \termref{OMS}
+ \termdefinitionLight{\termref{entailment}\synonym  logical consequence\synonym specialization}{relation between two \termref{OMS}  (or an OMS and a
+\termref{sentence}) 
 expressing that the second one is logically implied by the first one.}
+\begin{note}
+Entailment expresses that each model \termref{satisfying} the first OMS also 
+satisfies the second OMS (or the sentence, respectively).
+\end{note}
+\cbe
 \begin{note}
 The converse is generalization.
 \end{note}
-}
+
+
+\termdefinition{axiom}{\termref{sentence} that is  postulated to be valid (i.e.\ true in every \termref{model}).}
+
+
+  \termdefinition{theorem}{\termref{sentence} that has been proven from other axioms \index{axiom} and theorems\index{theorem} and therefore has been
+demonstrated to be a \termindex{logical consequence} of the axioms.}
+
+\cbs
+  \termdefinition{theorem prover}{tool that can prove \termref{theorems}.}
+\cbe
+
+
 
 
 
@@ -2112,6 +2128,27 @@ An \termref{extension} $O_2$ of an \termref{OMS} $O_1$ is a weak definitional ex
     Each implied extension is also a definitional extension but not vice versa.
   \end{note}
 
+\cbs
+   \termdefinition{consistency}{property of an \termref{OMS} expressing
+that it has a non-trivial set of \termref{logical consequences}, i.e.
+not every \termref{sentence} follows from the OMS.}
+\begin{note}
+The opposite is inconsistency.
+\end{note}
+
+   \termdefinition{satisfiability}{property of an \termref{OMS} expressing
+that it is \termref{satisfied} by least one \termref{model}.}
+\begin{note}
+The opposite is unsatisfiability.
+\end{note}
+\begin{note}
+Any satisfiable OMS is \termref{consistent}, but there are some
+\termref{logics} where the converse does not hold.
+\end{note}
+
+  \termdefinition{model finder}{tool that finds a \termref{models} of an
+\termref{OMS} and thus proves it to be \termref{satisfiable}.}
+\cbe
 
 \termdefinition{module}{\termref{subOMS} that conservatively extends to conservative extension  the whole \termref{OMS}.}
 %\todonote[author=Christoph Lange]{a more formal definition, from \todonoteURL{http://iswc2011.semanticweb.org/fileadmin/iswc/Papers/PostersDemos/iswc11pd_submission_75.pdf}: Modules are subsets of
@@ -2146,7 +2183,7 @@ after suitable translation)  of an OMS in a smaller \termref{signature} or a \te
 
 
 \termdefinition{maximum approximant}{
-best possible (in the sense of a maximum set of logical consequences)
+best possible (in the sense of a maximum set of \termref{logical consequences})
 \termref{approximant} of an OMS in a smaller \termref{signature} or a \termref{sublanguage}.}
 \begin{note}
  Technically, a maximum approximant is a uniform interpolant, see \cite{DBLP:conf/ijcai/LutzW11}.
