corrected refs to MOF + EBNF

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -925,8 +925,7 @@ any logic, see the semantics in \ref{c:direct-sematics}. \DOL uses IRIs for refe
 %
 6.5.3(a)& 
 An abstract syntax specified as an SMOF compliant meta model.	&
-Currently, the abstract syntax is specified using EBNF, see clause \ref{c:abstract-syntax}. The
-SMOF meta model is given in annex \ref{a:MOF}.
+\cbs The abstract syntax is specified using SMOF, see clause \ref{c:abstract-syntax}. An EBNF variant is given in annex \ref{a:EBNF}. \cbe
    \\ \hline
 %
 6.5.3(b)& 
@@ -1884,7 +1883,7 @@ The converse is generalization.
 
 
   \termdefinition{theorem}{\termref{sentence} that has been proven from other axioms \index{axiom} and theorems\index{theorem} and therefore has been
-demonstrated to be a \termindex{logical consequence} of the axioms.}
+demonstrated to be a \termref{logical consequence} of the axioms.}
 
 \cbs
   \termdefinition{theorem prover}{tool that can prove \termref{theorems}.}
@@ -2643,11 +2642,13 @@ The next three clauses are \emph{informative}. This clause provides some backgro
 \cbe
 
 \medskip \noindent 
-Clause \ref{c:abstract-syntax} defines the abstract syntax of \DOL (\emph{normative}) in Extended
-Backus–Naur Form (EBNF).  
+\cbs
+Clause \ref{c:abstract-syntax} defines the abstract syntax of \DOL (\emph{normative}) as an SMOF compliant meta model.\cbe
 Clause \ref{a:text-syntax} provides a human friendly text serialization of the abstract syntax of 
 \DOL (\emph{normative}). 
-Annex \ref{a:MOF} contains the abstract syntax specified as an SMOF compliant meta model.
+\cbs
+Annex \ref{a:EBNF} contains the abstract syntax specified using Extended
+Backus–Naur Form (EBNF) \cbe
 (\emph{informative}).
 
 \medskip \noindent Clause \ref{c:semantics} defines the
@@ -8509,7 +8510,7 @@ The actual translations are specified in \cite{OntoGraph}.
 \label{a:EBNF}
 
 \cbs
-The following subclauses, one per \cbs MOF metaclass \cbe, specify the abstract syntax of \DOL in EBNF. Note that we deviate from the EBNF specification in
+The following subclauses specify the abstract syntax of \DOL in EBNF. Note that we deviate from the EBNF specification in
  \nisref{ISO/IEC 14977:1996} in favor of a more modern and concise
 EBNF syntax.\footnote{\red{More precisely, \nisref{ISO/IEC 14977:1996} requires commas between the (non-)terminals of a right-hand side, which we omit 
 for the sake of better readability. Also, we replace the separator \syntax{=}
