removed superfluous \red's

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1703,9 +1703,8 @@ For the purposes of this document, the following terms and definitions apply.
 % non-logical symbols\index{non-logical symbol}, and OMS mappings\index{OMS mapping} as its sentences\index{sentence}.
 % \end{note}
 
-\red{
   \termdefinition{library}{collection of named \termref{OMS} and OMS networks\index{OMS network}, possibly written in different OMS languages\index{OMS language}, linked by named OMS mappings\index{OMS mapping}.}
-}
+
 
 \end{definitions}
 
@@ -1857,9 +1856,8 @@ other axioms and theorems; or have another of many possible statuses.
 
   \termdefinition{satisfaction relation}{relation between models and sentences indicating which sentences hold true in the model.}
 
-\red{
   \termdefinition{logical theory}{\termref{signature} equipped with a set of sentences\index{sentence} over the signature.}
-}
+
 \cbs
 \begin{note}
 Each logical theory is also an \termref{OMS}, and conversely each
@@ -1990,7 +1988,6 @@ not considered sentences of that OMS.
 
 \sclause{Structured OMS}
 
-\red{
 \termdefinition{structured OMS}
 {\termref{OMS} that results from other (basic and structured) \termref{OMS} by \termref{import}, \termref{union}, \termref{combination}, \termref{renaming} or other structuring operations.}
 \begin{note}
@@ -2010,7 +2007,7 @@ More precisely, an OMS is flattenable if and only if it is either a basic OMS or
 
 \termdefinition{elusive OMS}
 {OMS that is not flattenable\index{flattenable OMS}.}
-}
+
 
 
 
@@ -2350,7 +2347,6 @@ way.
   language.
 \end{note}
 
-\red{
 \termdefinition{OMS language graph}{graph of OMS languages\index{OMS language} and
 OMS language translations\index{language translation}, typically used in a \termref{heterogeneous environment}.}
 \begin{note}
@@ -2362,9 +2358,8 @@ OMS language translations\index{language translation}, typically used in a \term
     translation} or \termref{logic translation} that will be used
   whenever a translation is needed and no explicit translation is
   given.} 
-}
 
-\red{
+
 \termdefinition{heterogeneous environment}{environment for the
   expression of homogeneous and \termref{heterogeneous OMS}, comprising
 a \termref{logic graph}, an \termref{OMS language graph} and 
@@ -2375,7 +2370,7 @@ a \termref{logic graph}, an \termref{OMS language graph} and
   heterogeneous environment (maintained in some registry), with
   subenvironments for specific purposes.
 \end{note}
-}
+
 
 
 
@@ -2449,12 +2444,10 @@ sentences\index{sentence} \cbs (constraints on models)\cbe,
    relation between OMS languages and their logics and serializations.
   \end{note}
 
-\red{ 
   \termdefinition{supports relation}{relation between OMS
       languages\index{OMS language} and logics\index{logic} expressing the \termref{logical
       language aspect} of the former, namely that the constructs of
     the former lead to a \termref{logical theory} in the latter.} 
-}
 \begin{note}
 There is also a supports relation between OMS languages and serializations.
 \end{note}
@@ -2503,7 +2496,6 @@ of the target logic.
 
 \termdefinition{sublogic}{a \termref{logic} that is a syntactic restriction of another logic, inheriting its semantics.}
 
-\red{
 \termdefinition{logic graph}{graph of logics\index{logic}, logic 
 translations\index{logic translation} and logic reductions\index{logic reduction}, typically used in a \termref{heterogeneous environment}.}
 \begin{note}
@@ -2513,9 +2505,6 @@ translations\index{logic translation} and logic reductions\index{logic reduction
 %  under the term ``translation'' here.}
 \end{note}
 
-}
-
-\red{
   \termdefinition{homogeneous OMS}{\termref{OMS} whose parts are all formulated in one and the same \termref{logic}.}
 \begin{note}
 Opposite of \termref{heterogeneous OMS}.
@@ -2528,7 +2517,6 @@ Opposite of \termref{homogeneous OMS}.
 \begin{example}
 See section~\ref{dist-het-onto}.
 \end{example}
-}
 
 \termdefinition{logic approximation}{mapping of a source \termref{logic} onto a (usually less
 expressive) target \termref{logic} that tries to approximate the OMS expressed in the source
@@ -3915,7 +3903,7 @@ an EBNF grammar.
 
 DOL provides \cbs MOF metaclasses \cbe  for
 \begin{itemize}
-\item \red{OMS} (which can be native OMS in some OMS language, or unions, translations, minimizations, combinations, approximations of OMS, among others)
+\item OMS (which can be native OMS in some OMS language, or unions, translations, minimizations, combinations, approximations of OMS, among others)
 \item OMS mappings 
 \item OMS networks
 %\item \red{queries}
@@ -3943,7 +3931,7 @@ library consists of a name, followed by a list of
 definition of an OMS  (\syntax{OMSDefn}), 
 a mapping between OMS
 (\syntax{MappingDefn}), 
-\red{a definition of an OMS network  (\syntax{NetworkDefn})}
+a definition of an OMS network  (\syntax{NetworkDefn})
 %a definition related to queries 
 %(\syntax{QueryRelatedDefn})
 or a \syntax{Qualification} selecting a specific
@@ -3957,12 +3945,11 @@ At the beginning of a library, one can declare a \syntax{PrefixMap} for abbrevia
 \includegraphics[scale=0.6]{mof/dia/dia0.png}
 
 \sclause{OMS Networks}\label{c:networks}
-\red{
 Inside a library, one can define OMS networks (\syntax{NetworkDefn}).
 A \syntax{NetworkDefn} names an
 OMS network consisting of  OMS and OMS mappings. OMS networks may build on previously-defined
 OMS networks, and they can be used in \syntax{combination}s.  
-}
+
 
 An OMS network by default also includes all inclusions (generated by
 \syntax{ExtensionOMS}) between the involved OMS---unless these are
@@ -3985,17 +3972,17 @@ expressive logic (that is,
 some non-logical symbols are hidden, but the semantic effect of sentences involving these is kept),
 \item a module extracted from an OMS, using a restriction signature,
 \item an approximation of an OMS, in a subsignature or sublogic, with the effect that sentences not expressible in the subsignature resp.\ sublogic are replaced with a suitable approximation,
-\item \red{a filtering of an OMS, with the effect that some signature symbols and axioms are removed from the OMS,}
+\item a filtering of an OMS, with the effect that some signature symbols and axioms are removed from the OMS,
 \item an extension of an OMS with a basic or a minimizable OMS, optionally named and/or marked as conservative, monomorphic, definitional, weakly definitional or implied,
 \item a union of several OMS (the major difference between a union and extension is that the members of the unions need to be self-contained OMS, while the extensions may reuse the signature of the extended OMS), 
 \item a reference to an OMS existing on the Web,
 \item an OMS qualified with the OMS language that is used to express it,
 \item a combination of an OMS network (technically, this is a colimit, see \cite{ZimmermanEtAl06}),
 \item a minimization of an OMS, forcing the subsequently declared
-  non-logical symbols to be interpreted in a minimal way, while the non-logical symbols declared so far are fixed (alternatively, the non-logical symbols to be minimized and to be varied can be explicitly declared). \red{Variants are
+  non-logical symbols to be interpreted in a minimal way, while the non-logical symbols declared so far are fixed (alternatively, the non-logical symbols to be minimized and to be varied can be explicitly declared). Variants are
 maximization, freeness (minimizing also data sets and equalities on these), and cofreeness
-(maximizing also data sets and equalities on these),}
-\item \red{the application of a substitution to an OMS.}
+(maximizing also data sets and equalities on these),
+\item the application of a substitution to an OMS.
 
 
 \end{itemize}
@@ -4036,16 +4023,15 @@ OMS language of the current OMS).
 \sclause{OMS Mappings}\label{c:oms-mappings}
 
 An OMS mapping provides a connection between two OMS. An OMS mapping definition is the definition of 
-either a named interpretation (\syntax{IntprDefn}, \red{\syntax{Entailment}} or 
+either a named interpretation (\syntax{IntprDefn}, \syntax{Entailment} or 
 \syntax{EquivDefn}), a named declaration of the  relation between a module of an OMS and the whole 
 OMS (\syntax{ModuleRelDefn}), or a named \termref{alignment} (\syntax{AlignDefn}).
 
 The \syntax{SymbolMapItems} in an interpretation always must lead to a signature morphism; a proof 
 obligation expressing that the (translated) source OMS logically follows from the target OMS is 
-generated.  \red{An entailment is a variant where all symbols are mapped identically, while an 
-equivalence states that the model classes of two OMS are in bijective correspondence.}
+generated.  An entailment is a variant where all symbols are mapped identically, while an 
+equivalence states that the model classes of two OMS are in bijective correspondence.
 
-\red{
 Interpretations, entailments and equivalences between OMS networks are also possible. An 
 interpretation between OMS networks has to specify both a mapping between the nodes of the OMS 
 network, as well as, for each node, a symbol map from the OMS of that node to the target OMS to 
@@ -4053,14 +4039,14 @@ which it is mapped.
 %\ednote{In equivalences between OMS networks, should we allow for node mappings 
 %as well? In  \cite{MossakowskiTarlecki09}, this is allowed.
 %--- No, since we do not allow for signature morphisms either.}
-}
+
 
 In contrast to this functional style of mapping symbols, an alignment provides a relational 
 connection between two OMS,  using a set of \syntax{Correspondence}s. Each correspondence may relate 
 some OMS non-logical symbol to another one (possibly given by a term) with an optional confidence 
 value. Moreover, the relation between the two non-logical symbols can be explicitly
 specified (like being equal, or only being subsumed) in a similar way to the Alignment API \cite{AlignmentAPI}. 
-\red{The relations that can be used in a correspondence are equivalence, disjointness, subsumption, membership (the last two with a
+The relations that can be used in a correspondence are equivalence, disjointness, subsumption, membership (the last two with a
 variant for each direction) or a user-defined relation that is stored in a registry and must be prefixed with
 \url{http://www.omg.org/spec/DOL/correspondences/}.
 A default correspondence can be used; it is applied to all pairs of non-logical symbols with 
@@ -4071,7 +4057,7 @@ Using an \syntax{AlignCard}, left and right injectivity and totality of the
 \termref{alignment} can be specified (the default is left-injective, right-injective, left-total  and right-total).
 With \syntax{AlignSem}, different styles of networks of aligned ontologies (to be interpreted in 
 a logic-specific way) of alignments can be specified: whether a single domain is assumed, all domains are embedded into a global domain,
-or whether several local domains are linked (``contextualized'') by relations.}
+or whether several local domains are linked (``contextualized'') by relations.
 
 A \syntax{ModuleRelDefn} declares that a certain OMS
 actually is a module of some other OMS with respect
@@ -4165,11 +4151,11 @@ DOL adopts the CURIE specification of RDFa Core 1.1 \nisref{W3C/TR REC-rdfa-core
 \item \DOL does not support the declaration of a ``default prefix'' mapping %\CLnote[type=q-aut]{Are such explanatory notes OK here? --- Yes}
 (covering CURIEs such as \syntax{:name}).
 \item \DOL does support the declaration  of a ``no prefix'' mapping (covering CURIEs such as 
-\syntax{name}). \red{If there is no explicit declaration for the ``no prefix'', it defaults to a 
+\syntax{name}). If there is no explicit declaration for the ``no prefix'', it defaults to a 
 context-sensitive expansion mechanism, which always prepends the library IRI (in the context of a 
 structured OMS where named OMS are referenced) resp.\ the current OMS IRI (in the context of a basic
 OMS) to a symbol name. Both the separator between the library and the OMS name and that between the 
-OMS name and the symbol name can be declared (using the keyword \syntax{separators}), and both default to ``//''.}
+OMS name and the symbol name can be declared (using the keyword \syntax{separators}), and both default to ``//''.
 
 \item \DOL does not make use of the \syntax{safe\_curie} production.
 \item \DOL does not allow binding a relative IRI to a prefix.
@@ -8512,11 +8498,11 @@ The actual translations are specified in \cite{OntoGraph}.
 \cbs
 The following subclauses specify the abstract syntax of \DOL in EBNF. Note that we deviate from the EBNF specification in
  \nisref{ISO/IEC 14977:1996} in favor of a more modern and concise
-EBNF syntax.\footnote{\red{More precisely, \nisref{ISO/IEC 14977:1996} requires commas between the (non-)terminals of a right-hand side, which we omit 
+EBNF syntax.\footnote{More precisely, \nisref{ISO/IEC 14977:1996} requires commas between the (non-)terminals of a right-hand side, which we omit 
 for the sake of better readability. Also, we replace the separator \syntax{=}
 between left and right hand-side of a rule with \syntax{::=}, and 
 use the notation \syntax{N+}
-for one or more repetitions of \syntax{N}.}}  
+for one or more repetitions of \syntax{N}.}
 %Note that ISO EBNF lacks an operator for ``at least one repetition''.  This \IS therefore adopts the following convention: Whenever some sequence \syntax{S} is repeated at least once, we give it a non-terminal identifier of its own (\syntax{RepeatedS = S \{ S \} ;}), or group it as in \syntax{LongerExpression = Foo Bar ( S \{ S \} ) ;}.
 \cbe
 
@@ -8812,14 +8798,13 @@ There are also general purpose OMS languages, which can express both \termref{OM
 \end{definitions}  
 
 \sclause{MOF Abstract Syntax}
-\red{
 Queries are a means to extract information from an OMS.  \DOL's \syntax{QueryDefn}s cover 
 ``select''-type queries that deliver an answer substitution for the query variables. (Answer) 
 substitutions can be stored separately, using a \syntax{SubstDefn}. A
 \syntax{ResultDefn} expresses that certain answer substitutions are
 the result of a query. Optionally, a result can be expressed to be
 complete, meaning that it comprises all answer substitutions to the query.
-}
+
 \includegraphics[scale=0.5]{mof/dia/dia6.png}
 
 \sclause{EBNF Concrete Syntax}
