--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -8498,11 +8498,11 @@ The actual translations are specified in \cite{OntoGraph}.
 \cbs
 The following subclauses specify the abstract syntax of \DOL in EBNF. Note that we deviate from the EBNF specification in
  \nisref{ISO/IEC 14977:1996} in favor of a more modern and concise
-EBNF syntax.\footnote{More precisely, \nisref{ISO/IEC 14977:1996} requires commas between the (non-)terminals of a right-hand side, which we omit 
+EBNF syntax. More precisely, \nisref{ISO/IEC 14977:1996} requires commas between the (non-)terminals of a right-hand side, which we omit 
 for the sake of better readability. Also, we replace the separator \syntax{=}
 between left and right hand-side of a rule with \syntax{::=}, and 
 use the notation \syntax{N+}
-for one or more repetitions of \syntax{N}.}
+for one or more repetitions of \syntax{N}.
 %Note that ISO EBNF lacks an operator for ``at least one repetition''.  This \IS therefore adopts the following convention: Whenever some sequence \syntax{S} is repeated at least once, we give it a non-terminal identifier of its own (\syntax{RepeatedS = S \{ S \} ;}), or group it as in \syntax{LongerExpression = Foo Bar ( S \{ S \} ) ;}.
 \cbe
 
