--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -3995,13 +3995,15 @@ An OMS definition \syntax{OMSDefn} names an  OMS.
 
 It can be
 optionally marked as inconsistent, consistent, monomorphic or having a unique model using 
-\syntax{ConsStrength}.\footnote{More precisely, \syntax{'consequence-conservative'}
-here requires the OMS to have only tautologies as signature-free logical consequences, while \syntax{'not-consequence-conservative'} expresses that this is not the case. 
+\syntax{ConsStrength}. More precisely, \syntax{'consequence-conservative'}
+here requires the OMS to have only tautologies as signature-free logical consequences, while \syntax{'not\-consequence-conservative'} expresses that this is not the case. 
 \syntax{'model-conservative'}
 requires satisfiability of the OMS, \syntax{'not-model-conservative'} its
 unsatisfiability.
-\syntax{'definitional'} expresses the unique model property; this may be interesting for characterizing
-OMS (e.g.\ returned by model finders) that are used to describe single models.}. An
+\syntax{'de\-fi\-nitional'} expresses \cbs that the OMS has a unique model\cbe; this may be interesting for characterizing
+OMS (e.g.\ returned by model finders) that are used to describe single models. 
+
+A
 \syntax{SymbolItems}, used in an OMS \syntax{Reduction}, is a
 list of non-logical symbols that are to be hidden. A \syntax{LogicReduction}
 denotes a logic reduction to a
